--- a/src/App.css
+++ b/src/App.css
@@ -4,7 +4,7 @@
   text-align: center;
 }
 .board{
-  background: #F5EAEA;
+  background: #8f8282;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -13,6 +13,26 @@
 img{
   height: 100%;
 }
+input{
+  border-radius: 12px;
+    height: 27px;
+    font-size: 18px;
+    text-align: center;
+    border: none;
+    outline: none;
+}
 .dice{
-  height: 20px;
+  height: 90px;
+  margin-bottom: 10px;
+}
+.button{
+    padding: 8px;
+    border-radius: 10px;
+    cursor: pointer;
+    background: #7bcd94;
+    color: white;
+    font-weight: 500;
+}
+.button:hover{
+  background: #5eaa75;
 }
