--- a/src/cmps/PlayerDisplay/player-display.css
+++ b/src/cmps/PlayerDisplay/player-display.css
@@ -1,3 +1,19 @@
 .player-display{
-   width: 100%;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    color: white
+}
+
+.player-header{
+    font-size: 30px;
+    font-weight: 700;
+}
+
+.player-score{
+    font-weight: 700;
+}
+.current-score{
+    font-weight: 700;
 }
